--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "apple",
+  "homepage": "https://tearex05.github.io/apple",
   "private": true,
   "version": "0.0.0",
   "type": "module",
